# Credio-isoparser

./: .gitinore  CMakeLists.txt  README.md  main.cpp
headers/: DataElementsConfig.h  Iso8583UnpackingFromCards.h  PayAttitude.h  utils.h
src/: DataElementsConfig.cpp  Iso8583UnpackingFromCards.cpp  Isomessage.cpp  PayAttitude.cpp  data.cpp  utils.cpp
